--- a/index.html
+++ b/index.html
@@ -167,34 +167,31 @@
             </div>
 
             <div class="box">
-                <img src="Fauna/ostrich.jpeg" alt="">
+                <img src="holo4.jpeg" alt="">
                 <div class="content">   
                     <h3>Ostrich</h3>
                     <a href="Fauna/Ostrich.mp4" class="btn">View hologram</a>
                 </div>
             </div>
 
-
-
-
             <div class="box">
-                <img src="Flora/orchid.jpeg" alt="">
-                <div class="content">
-                    <h3>Orchid</h3>
-                    <a href="Flora/Orchid.mp4" class="btn"> View hologram</a>
-                </div>
-            </div>
-
-            <div class="box">
-                <img src="flora/rose.jpeg" alt="">
+                <img src="holo6.jpeg" alt="">
                 <div class="content">
                     <h3>rose</h3>
                     <a href="Flora/Rose.mp4" class="btn">View hologram</a>
                 </div>
             </div>
+            
+            <div class="box">
+                <img src="holo5.jpg" alt="">
+                <div class="content">
+                    <h3>Moth Orchids</h3>
+                    <a href="Flora/Rose.mp4" class="btn">View hologram</a>
+                </div>
+            </div>
 
             <div class="box">
-                <img src="Flora/Japanese.jpeg" alt="">
+                <img src="holo7.webp" alt="">
                 <div class="content">
                     <h3>Cherry Blossom</h3>
                     <a href="Flora/japanese.mp4" class="btn">View hologram</a>
@@ -202,7 +199,7 @@
             </div>
 
             <div class="box">
-                <img src="fauna/sunflower.avif" alt="">
+                <img src="holo8.jpeg" alt="">
                 <div class="content">
                     <h3>sunflower</h3>
                     <a href="Flora/Sunflower.mp4" class="btn">View hologram</a>
